# simulator-covid-19-argentina

./: .gitignore  README.md  conda_environment.yml  convert_censo_xls_to_hdf5.py  database_experiments.ipynb  fake_population_generator.py  generate_databases.py  notes  requirements.txt  simulation_experiments.ipynb
data/argentina/: .gitignore  covid19ardata.csv
data/argentina/censo-2010/: README.md
data/argentina/indec/: .gitignore
gen_dbs/: convert_school_db.py  fake_population_generator.py  gen_censo_db.py  generate_databases.py
shinyapp/: server.R
shinyapp/rsconnect/shinyapps.io/vmartinv/: shinyapp.dcf
simulation/: .gitignore  CMakeLists.txt  common.hpp  disease_parameters.hpp  endian.hpp  main.cpp  population.hpp  progress_bar.cpp  progress_bar.hpp  seir_simulation.hpp  seir_state.hpp  simulation.cpp  simulation_parameters.hpp
utils/: utils.py
